# flui

./: .gitignore  README.md  flui.toml  justfile  pyproject.toml  taplo.toml
sample/: reference-ncbi.fasta
src/flui/: app.py  cli.py  dna.py  header.py  help.md  segment.py  settings.py
src/flui/subtype/: __init__.py  data.py  kmer_index.py  kmer_set.py
src/flui/tui/: app.py  app.scss  help_screen.md  help_screen.py
tests/: test_header.py  test_kmer.py
tests/__snapshots__/: test_kmer.ambr
