[project]
name = "flui"
version = "0.1.0"
description = "TUI for online sub-typing of Avian Flu"
readme = "README.md"
authors = [{ name = "Brett Calcott", email = "brett@dragonfly.co.nz" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "loguru>=0.7.2",
  "numpy>=2.1.2",
  "platformdirs>=4.3.6",
  "pydantic>=2.9.2",
  "scipy>=1.14.1",
  "textual>=0.84.0",
  "typer>=0.12.5",
  "watchfiles>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
flui = "flui:cli.flui_app"
subtyper = "flui:cli.subtype_app"

[tool.uv]
dev-dependencies = [
  "hypothesis>=6.115.5",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-benchmark>=4.0.0",
  "pytest-sugar>=1.0.0",
]
